--- a/gb/19/2/17/n11051253.md
+++ b/gb/19/2/17/n11051253.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yktzsx335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yktzsx335/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/yktzsx335/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yktzsx335/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/yktzsx335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yktzsx335/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/yktzsx335/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yktzsx335/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/yktzsx335/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yktzsx335/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/yktzsx335/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yktzsx335/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/yktzsx335/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yktzsx335/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/yktzsx335/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yktzsx335/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/yktzsx335/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yktzsx335/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/yktzsx335/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yktzsx335/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yktzsx335/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yktzsx335/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yktzsx335/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yktzsx335/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yktzsx335/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yktzsx335/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yktzsx335/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yktzsx335/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yktzsx335/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yktzsx335/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yktzsx335/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yktzsx335/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yktzsx335/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/yktzsx335/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/yktzsx335/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yktzsx335/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yktzsx335/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yktzsx335/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yktzsx335/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yktzsx335/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yktzsx335/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yktzsx335/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yktzsx335/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/yktzsx335/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yktzsx335/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yktzsx335/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yktzsx335/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>跨州追神韵 马术中心老板：让今天变得美好</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/02/1902161841111973-600x400.jpg" />
 <h6>Christina Rosencranz 女士驱车单程约2个小时，从威斯康辛州赶到明尼苏达州的圣保罗，于2月16日下午观看了神韵环球艺术团的演出。（林南宇／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2019年02月17日讯】（大纪元记者林南宇美国圣保罗报导）<ahref="https://github.com/yktzsx335/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>环球艺术团于2月16日下午在美国明州<ahref="https://github.com/yktzsx335/djy/blob/master/gb/tag/%E5%9C%A3%E4%BF%9D%E7%BD%97%E5%A5%A5%E5%BE%B7%E5%A8%81%E8%A1%A8%E6%BC%94%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83.md#1">圣保罗奥德威表演艺术中心</a>（St. Paul Ordway Center for the Performing Arts）的第四场演出，在观众热烈的掌声中落下帷幕， 舞台上一个个精彩纷呈的小舞剧、栩栩如生的动态<ahref="https://github.com/yktzsx335/djy/blob/master/gb/tag/%E5%A4%A9%E5%B9%95.md#1">天幕</a>以及演出所特有的超凡脱俗，都给Christina Rosencranz女士留下了很深的印象。</p>
-<p>Christina Rosencranz 女士住在威斯康辛州，目前她是一家马术中心的老板。之前她曾在州政府和县政府社会服务部门工作。为了观看<ahref="https://github.com/yktzsx335/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>演出，她驱车单程约2个小时，从威斯康辛州赶到明尼苏达州的圣保罗。</p>
-<p>“让舞台上的演员进入<ahref="https://github.com/yktzsx335/djy/blob/master/gb/tag/%E5%A4%A9%E5%B9%95.md#1">天幕</a>背景，我认为这种制作方法非常巧妙。” Rosencranz谈起刚刚看到的演出，赞不绝口。她表示，虽然看过很多演出，但还是头一次看到这种天幕背景的制作方法。</p>
-<p>“例如，舞台上那位喜爱艺术的女孩看画时居然飞入画中，那幅画也变活了， 这种意境真美，而天幕则为节目增加了一种超凡脱俗的灵气。” 她说，那一个个干净利落的高难度动作、那行云流水般流畅的舞姿、流光溢彩的<ahref="https://github.com/yktzsx335/djy/blob/master/gb/tag/%E6%9C%8D%E9%A5%B0.md#1">服饰</a>，真是美不胜收！</p>
+	<p>【大纪元2019年02月17日讯】（大纪元记者林南宇美国圣保罗报导）<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>环球艺术团于2月16日下午在美国明州<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%9C%A3%E4%BF%9D%E7%BD%97%E5%A5%A5%E5%BE%B7%E5%A8%81%E8%A1%A8%E6%BC%94%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83.md#1">圣保罗奥德威表演艺术中心</a>（St. Paul Ordway Center for the Performing Arts）的第四场演出，在观众热烈的掌声中落下帷幕， 舞台上一个个精彩纷呈的小舞剧、栩栩如生的动态<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%A4%A9%E5%B9%95.md#1">天幕</a>以及演出所特有的超凡脱俗，都给Christina Rosencranz女士留下了很深的印象。</p>
+<p>Christina Rosencranz 女士住在威斯康辛州，目前她是一家马术中心的老板。之前她曾在州政府和县政府社会服务部门工作。为了观看<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>演出，她驱车单程约2个小时，从威斯康辛州赶到明尼苏达州的圣保罗。</p>
+<p>“让舞台上的演员进入<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%A4%A9%E5%B9%95.md#1">天幕</a>背景，我认为这种制作方法非常巧妙。” Rosencranz谈起刚刚看到的演出，赞不绝口。她表示，虽然看过很多演出，但还是头一次看到这种天幕背景的制作方法。</p>
+<p>“例如，舞台上那位喜爱艺术的女孩看画时居然飞入画中，那幅画也变活了， 这种意境真美，而天幕则为节目增加了一种超凡脱俗的灵气。” 她说，那一个个干净利落的高难度动作、那行云流水般流畅的舞姿、流光溢彩的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%9C%8D%E9%A5%B0.md#1">服饰</a>，真是美不胜收！</p>
 <p>她表示从最后一个节目中她体会到的是“当灾难来时， 人类获得救助，人也将能够回到天堂。” 她说：“那一幕是救世主来救人了。这是这演出的神性题材的一部分，是个喜剧结尾。”</p>
 <p>她表示观赏完今天下午的演出之后，她的脑海中仍然萦绕着舞台上精彩的画面， 她说：“这场演出令我今天这一天变得非常美好，非常值得来看。 ”</p>
 <p>她最后说，“我非常喜欢这个演出，我会推荐给其他人。 接下来我会去参加另一个假日派对活动，我会与他们分享看（神韵）演出的经验。”</p>
@@ -19,38 +19,43 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yktzsx335/djy/blob/master/gb/19/2/16/n11049906.md#1">领略天人合一 研究所主管感悟神韵深意</a></li>
-<li><a href="https://github.com/yktzsx335/djy/blob/master/gb/19/2/16/n11049914.md#1">中华文化与创世主相联 专家观神韵获启迪</a></li>
-<li><a href="https://github.com/yktzsx335/djy/blob/master/gb/19/2/16/n11049934.md#1">震撼心灵 带来希望 金融公司经理观神韵落泪</a></li>
-<li><a href="https://github.com/yktzsx335/djy/blob/master/gb/19/2/16/n11049961.md#1">神韵墨尔本再大爆满 精英感悟创世主降临?</a></li>
-<li><a href="https://github.com/yktzsx335/djy/blob/master/gb/19/2/16/n11050073.md#1">二胡优美无比 乐器公司老板赞神韵乐团</a></li>
-<li><a href="https://github.com/yktzsx335/djy/blob/master/gb/19/2/16/n11050086.md#1">神韵艺术非凡 法国银行主管成忠实粉丝</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/2/16/n11049906.md#1">领略天人合一 研究所主管感悟神韵深意</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/2/16/n11049914.md#1">中华文化与创世主相联 专家观神韵获启迪</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/2/16/n11049934.md#1">震撼心灵 带来希望 金融公司经理观神韵落泪</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/2/16/n11049961.md#1">神韵墨尔本再大爆满 精英感悟创世主降临?</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/2/16/n11050073.md#1">二胡优美无比 乐器公司老板赞神韵乐团</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/2/16/n11050086.md#1">神韵艺术非凡 法国银行主管成忠实粉丝</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/20/n10989886.md#1" target="_blank">共产暴政录：“清理阶级队伍”运动</a></li><li><a href="https://github.com/yktzsx335/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488493.md#1" target="_blank">苦难中坚守希望 京城姐妹的跌宕人生（2）</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/9/n10203021.md#1" target="_blank">泣血而书——民国与文革中知识份子的命运</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/10/n11782021.md#1" target="_blank">读《转法轮》澳洲西人找到生命意义</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yktzsx335/djy/blob/master/gb/20/7/1/n12224164.md#1">国安恶法38条震惊全球：要管全世界的人</a></li>
-<li><a href="https://github.com/yktzsx335/djy/blob/master/gb/20/6/29/n12219819.md#1">【直播】反国安恶法 港人7.1维园大游行</a></li>
-<li><a href="https://github.com/yktzsx335/djy/blob/master/gb/20/6/23/n12207542.md#1">【独家】前微博审核员勇揭中共审查黑幕</a></li>
-<li><a href="https://github.com/yktzsx335/djy/blob/master/gb/20/6/30/n12222770.md#1">班农批西媒无视中共罪责反攻击大纪元</a></li>
-<li><a href="https://github.com/yktzsx335/djy/blob/master/gb/20/7/1/n12225068.md#1">莫迪正式退出微博 删除跟习近平的合影</a></li>
-<li><a href="https://github.com/yktzsx335/djy/blob/master/gb/20/6/29/n12220609.md#1">为救汪小菲事业八折卖豪宅？大S经纪人回应</a></li>
-<li><a href="https://github.com/yktzsx335/djy/blob/master/gb/20/6/30/n12222874.md#1">中共通过港版国安法 何韵诗脸书发文诉心声</a></li>
-<li><a href="https://github.com/yktzsx335/djy/blob/master/gb/20/6/29/n12220251.md#1">汪峰49岁生日 章子怡携女儿跳萤光舞送祝福</a></li>
-<li><a href="https://github.com/yktzsx335/djy/blob/master/gb/20/6/29/n12220365.md#1">与黄秋生合演新片香港开红盘 林嘉欣发表感言</a></li>
-<li><a href="https://github.com/yktzsx335/djy/blob/master/gb/20/6/30/n12223084.md#1">呼吸困难咳嗽疑染疫 港星检测结果意外获恭喜</a></li>
-<li><a href="https://github.com/yktzsx335/djy/blob/master/gb/12/1/21/n3492348.md#1">令人感动千年    范仲淹</a></li>
-<li><a href="https://github.com/yktzsx335/djy/blob/master/gb/20/6/12/n12180144.md#1">2020庚子年+日食带大周期  预兆中共亡</a></li>
-<li><a href="https://github.com/yktzsx335/djy/blob/master/gb/20/6/29/n12219023.md#1">北京冰雹状似中共病毒 这是末日预兆？</a></li>
-<li><a href="https://github.com/yktzsx335/djy/blob/master/gb/11/3/19/n3202908.md#1">历史故事：范蠡知进退</a></li>
-<li><a href="https://github.com/yktzsx335/djy/blob/master/gb/20/6/24/n12209542.md#1">药王孙思邈的预言神通</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yktzsx335/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yktzsx335/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/2/17/n11051253.htm">跨州追神韵 马术中心老板：让今天变得美好</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/2/17/n11051253.htm">跨州追神韵 马术中心老板：让今天变得美好</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/yktzsx335/djy/blob/master/gb/19/2/17/n11051253.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yktzsx335/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yktzsx335/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yktzsx335/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yktzsx335/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yktzsx335/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yktzsx335/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yktzsx335/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yktzsx335/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yktzsx335/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yktzsx335/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yktzsx335/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yktzsx335/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yktzsx335/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yktzsx335/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yktzsx335/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yktzsx335/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yktzsx335/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yktzsx335/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/yktzsx335/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yktzsx335/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yktzsx335/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yktzsx335/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yktzsx335/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yktzsx335/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/yktzsx335/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yktzsx335/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yktzsx335/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yktzsx335/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yktzsx335/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yktzsx335/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yktzsx335/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yktzsx335/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yktzsx335/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yktzsx335/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yktzsx335/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yktzsx335/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yktzsx335/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yktzsx335/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yktzsx335/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yktzsx335/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yktzsx335/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yktzsx335/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yktzsx335/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yktzsx335/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yktzsx335/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yktzsx335/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yktzsx335/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yktzsx335/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/19/2/17/n11051253.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
